feat: lets-go-chat implementation
